--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 <body>
 	<nav class="ink-navigation">
 		<ul class="menu horizontal black">
-			{% block menu %}{% endblock %} 
+			{% block navigation %}{% endblock %} 
 			<li ><a href="/logout" >Logged in as <em>{{ username }}</em>. <i class="fa fa-power-off"></i> Log out</a></li>
 		</ul>
 	</nav>
