--- a/templates/preview.html
+++ b/templates/preview.html
@@ -9,7 +9,7 @@
 {% endif %}
 #}
 
-{% block menu %}
+{% block navigation %}
 				<li><a href="/"><i class="fa fa-arrow-left"></i> Back to dashboard</a></li>
 				<li><a href="#"><i class="fa fa-cloud-upload"></i> Publish</a></li>
 {% endblock %}
