--- a/templates/preview.html
+++ b/templates/preview.html
@@ -11,6 +11,8 @@
 
 {% block navigation %}
 				<li><a href="/"><i class="fa fa-arrow-left"></i> Back to dashboard</a></li>
+				<li><a href="/story/{{ storyid }}/preview"><i class="fa fa-pencil"></i> Edit story</a></li>
+uu
 				<li><a href="#"><i class="fa fa-cloud-upload"></i> Publish</a></li>
 {% endblock %}
 
