--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
 
 	<script src="{{ url_for('static', filename='js/ink-all.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/autoload.js') }}"></script>
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	{% for script_path in js_includes %}
 	<script src="{{ url_for('static', filename=script_path)}}"></script>
 	{% endfor %}
